# AssetStudio

./: .gitignore  AssetStudio.sln  CHANGELOG.md  README.md
AssetStudio/: AssetStudio.csproj  AssetsManager.cs  BundleFile.cs  ILogger.cs  Logger.cs  SerializedFile.cs
AssetStudio.PInvoke/: AssetStudio.PInvoke.csproj  DllLoader.cs
AssetStudio/Classes/: VideoClip.cs
AssetStudioCLI/: AssetStudioCLI.csproj  CLILogger.cs  Exporter.cs  Program.cs  ReadMe.md  Studio.cs
AssetStudioCLI/Components/: AssetItem.cs  CLIAnsiColors.cs  CLIWinAnsiFix.cs
AssetStudioCLI/Options/: CLIOptions.cs  Option.cs  OptionExtensions.cs
AssetStudioFBXNative/: AssetStudioFBXNative.vcxproj
AssetStudioFBXWrapper/: AssetStudioFBXWrapper.csproj  Fbx.cs
AssetStudioGUI/: AboutForm.Designer.cs  AboutForm.cs  AboutForm.resx  AssetStudioGUI.csproj  AssetStudioGUIForm.Designer.cs  AssetStudioGUIForm.cs  AssetStudioGUIForm.resx  DirectBitmap.cs  ExportOptions.Designer.cs  ExportOptions.cs  Exporter.cs  GUILogger.cs  Studio.cs  app.manifest
AssetStudioGUI/Components/: AlphanumComparatorFast.cs  AlphanumComparatorFastNet.cs  TreeViewExtensions.cs
AssetStudioUtility/: AssetStudioUtility.csproj  AudioClipConverter.cs  ImageExtensions.cs  ImageFormat.cs  SpriteHelper.cs  Texture2DConverter.cs  Texture2DExtensions.cs
Texture2DDecoderNative/: CMakeLists.txt  Texture2DDecoderNative.vcxproj
Texture2DDecoderNative/crunch/: crn_decomp.h
Texture2DDecoderNative/unitycrunch/: crn_decomp.h
Texture2DDecoderWrapper/: Texture2DDecoderWrapper.csproj  TextureDecoder.cs
(+19 files in other folders)
